<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_formulario_contacto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.lavidaesunvideojuego.infocontacto.FormularioContacto"
    android:weightSum="1">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edittext_text"
        android:ems="10"
        android:textStyle="bold"
        android:id="@+id/EtNombre" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edittext_FechaNac"
        android:ems="10"
        android:textStyle="bold"
        android:id="@+id/EtFechaNac" />





    <EditText
        android:id="@+id/EtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_telefono"
        android:inputType="phone"
        android:textStyle="bold"
        android:ems="10"
        />

    <EditText
        android:id="@+id/EtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_email"
        android:inputType="textEmailAddress"
        android:textStyle="bold"
        android:ems="10"
        />

    <MultiAutoCompleteTextView
        android:id="@+id/MaCTVDescripcion"
        android:hint="@string/MaCTVDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_button_top"
        android:id="@+id/button"
        android:background="@color/colorAccent"
        android:text="@string/BtnText_Siguiente"/>


</LinearLayout>
